# swagger/grpc.swagger.yaml
@@ -11,15 +11,14 @@ consumes:
 produces:
   - application/json
 paths:
-  /admin.v1.Admin/GenerateApiKey:
+  /admin.v1.Admin/GenerateNewApiKey:
     post:
-      summary: GenerateApiKey this is for generating API key for previously generated keys which did not have API key. It should fail for keys which already has API Key
-      operationId: Admin_GenerateApiKey
+      operationId: Admin_GenerateNewApiKey
       responses:
         "200":
           description: A successful response.
           schema:
-            $ref: '#/definitions/v1GenerateApiKeyResponse'
+            $ref: '#/definitions/v1GenerateNewApiKeyResponse'
         default:
           description: An unexpected error response.
           schema:
@@ -29,7 +28,27 @@ paths:
           in: body
           required: true
           schema:
-            $ref: '#/definitions/v1GenerateApiKeyRequest'
+            $ref: '#/definitions/v1GenerateNewApiKeyRequest'
+      tags:
+        - Admin
+  /admin.v1.Admin/ListAllKeys:
+    post:
+      operationId: Admin_ListAllKeys
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            $ref: '#/definitions/v1ListAllKeysResponse'
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/rpcStatus'
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/v1ListAllKeysRequest'
       tags:
         - Admin
   /admin.v1.Admin/LockKey:
@@ -50,26 +69,6 @@ paths:
           required: true
           schema:
             $ref: '#/definitions/v1LockKeyRequest'
-      tags:
-        - Admin
-  /admin.v1.Admin/RotateApiKey:
-    post:
-      operationId: Admin_RotateApiKey
-      responses:
-        "200":
-          description: A successful response.
-          schema:
-            $ref: '#/definitions/v1RotateApiKeyResponse'
-        default:
-          description: An unexpected error response.
-          schema:
-            $ref: '#/definitions/rpcStatus'
-      parameters:
-        - name: body
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/v1RotateApiKeyRequest'
       tags:
         - Admin
   /admin.v1.Admin/UnlockKey:
@@ -232,16 +231,6 @@ definitions:
         items:
           type: object
           $ref: '#/definitions/protobufAny'
-  v1GenerateApiKeyRequest:
-    type: object
-    properties:
-      publicKeyG1:
-        type: string
-  v1GenerateApiKeyResponse:
-    type: object
-    properties:
-      apiKey:
-        type: string
   v1GenerateKeyPairRequest:
     type: object
     properties:
@@ -268,6 +257,18 @@ definitions:
       apiKey:
         type: string
         title: API key associated with the keypair
+  v1GenerateNewApiKeyRequest:
+    type: object
+    properties:
+      publicKeyG1:
+        type: string
+  v1GenerateNewApiKeyResponse:
+    type: object
+    properties:
+      publicKeyG1:
+        type: string
+      apiKey:
+        type: string
   v1GetKeyMetadataRequest:
     type: object
     properties:
@@ -315,6 +316,29 @@ definitions:
       apiKey:
         type: string
         title: API key associated with the keypair
+  v1KeyMetadata:
+    type: object
+    properties:
+      publicKeyG1:
+        type: string
+      publicKeyG2:
+        type: string
+      locked:
+        type: boolean
+      createdAt:
+        type: string
+      updatedAt:
+        type: string
+  v1ListAllKeysRequest:
+    type: object
+  v1ListAllKeysResponse:
+    type: object
+    properties:
+      keys:
+        type: array
+        items:
+          type: object
+          $ref: '#/definitions/v1KeyMetadata'
   v1ListKeysRequest:
     type: object
   v1ListKeysResponse:
@@ -342,18 +366,6 @@ definitions:
       publicKeyG2:
         type: string
         title: G2 Public key
-  v1RotateApiKeyRequest:
-    type: object
-    properties:
-      publicKeyG1:
-        type: string
-  v1RotateApiKeyResponse:
-    type: object
-    properties:
-      publicKeyG1:
-        type: string
-      apiKey:
-        type: string
   v1SignG1Request:
     type: object
     properties:
